fix(components): wrap required asterisk in span to support multiline label | bh | #811

--- a/packages/components/src/components/form/checkbox-wrapper/checkbox-wrapper.scss
+++ b/packages/components/src/components/form/checkbox-wrapper/checkbox-wrapper.scss
@@ -110,14 +110,6 @@
     color: $p-color-theme-light-default;
     transition: color $p-animation-hover-duration $p-animation-hover-bezier;
 
-    &--required {
-      display: inline-flex;
-      &::after {
-        content: '*';
-        color: $p-color-notification-error;
-      }
-    }
-
     &--disabled {
       color: $p-color-theme-light-state-disabled;
       cursor: default;
@@ -179,6 +171,13 @@
       &--hidden-xl {
         @include p-checkbox-wrapper-label-text-hidden;
       }
+    }
+  }
+
+  &__required {
+    &::after {
+      content: '*';
+      color: $p-color-notification-error;
     }
   }
 
