--- a/packages/components/src/components/form/text-field-wrapper/text-field-wrapper.scss
+++ b/packages/components/src/components/form/text-field-wrapper/text-field-wrapper.scss
@@ -190,13 +190,10 @@
     }
   }
 
-  &__label-text {
-    &--required {
-      display: inline-block;
-      &::after {
-        content: '*';
-        color: $p-color-notification-error;
-      }
+  &__required {
+    &::after {
+      content: '*';
+      color: $p-color-notification-error;
     }
   }
 
